2008-02-25 Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
	* src/ReportBase/_CommandLineReport.py: add user friendly output to cli 
	gramps.py -u --open=merge --action=report -p "name=indiv_complete,show=all"
	#0001823

2008-02-25 Łukasz Rymarczyk <yenidai(at)poczta(dot)onet(dot)pl>
	* src/ArgHandler.py: add UI Report Names to output 
	0001826: Command line - viewing available reports nicer to read

2008-02-25  Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/plugins/GrampsCfg.py: new (GrampsPreferences.update_idformat_entry):
	add method that sets new ID format preferences in db. 
	(GrampsPreferences.add_prefix_panel): use callback update_idformat.entry 
	0001817: Make preference changes take immediate effect. 
	* po/POTFILES.in: add DateParserDisplayTest.py. #0001819

2008-02-25 Douglas S. Blank <dblank@cs.brynmawr.edu>
	* src/gen/lib/test/date_test.py: new slash date tests
	* src/gen/lib/date.py: new get_slash(), fix slash conversions
	* src/DateHandler/_DateParser.py: parser sets slash date to Julian

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/GrampsDbUtils/_ReadXML.py:
	* src/GrampsDbUtils/_GrmapsDbWriteXML.py:
	Partial fix for 0001722: add dialog that on import gives a warning if the 
	xml is made with an older version

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/docgen/AsciiDoc.py:
	Fix page_break()

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_CommandLineReport.py:
	0001587: Command line reports do not work

2008-02-24 Brian Matherly <brian@gramps-project.org>
	* src/plugins/CmdRef.py:
	0001808: Bug when I click on a Generate Commandline Plugin Reference

2008-02-24 Gary Burton <gary.burton@zen.co.uk>
	* src/Selectors/_SelectPerson.py: Let return key close search field.
	Bug #1728

2008-02-24  Raphael Ackermann <raphael.ackermann@gmail.com>
	* Editors/_EditRepository.py
	* Editors/_EditFamily.py
	* DisplayTabs/_SourceEmbedList.py
	* DisplayTabs/_PersonRefEmbedList.py